/*

   calin/proto/iact_data/telescope_run_configuration.proto
                                                -- Stephen Fegan -- 2016-03-14

   Protobufs for run-wise instrument configuration

   Copyright 2015, Stephen Fegan <sfegan@llr.in2p3.fr>
   LLR, Ecole Polytechnique, CNRS/IN2P3

   This file is part of "calin"

   "calin" is free software: you can redistribute it and/or modify it
   under the terms of the GNU General Public License version 2 or
   later, as published by the Free Software Foundation.

   "calin" is distributed in the hope that it will be useful, but
   WITHOUT ANY WARRANTY; without even the implied warranty of
   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
   General Public License for more details.

*/

syntax = "proto3";

import "calin.proto";
import "common_types.proto";
import "iact_data/instrument_layout.proto";
import "iact_data/nectarcam_module_configuration.proto";

package calin.ix.iact_data.telescope_run_configuration;

enum SerializedRawHeaderType {
  SERIALIZED_RAW_HEADER_NONE                               = 0;
  SERIALIZED_RAW_HEADER_ACTL_PROTOBUF                      = 1;
};

message TelescopeRunConfiguration {
  string filename                                          = 1 [
    (CFO).desc = "Primary filename of run data." ];
  uint32 run_number                                        = 2 [
    (CFO).desc = "Run number." ];
  common_types.Time run_start_time                         = 3 [
    (CFO).desc = "Start date and time of run." ];
  repeated string fragment_filename                        = 4 [
    (CFO).desc = "Filenames of run data fragments." ];

  repeated int32 configured_channel_index                  = 11 [
    (CFO).desc = "Index within list of configured channels for each channel "
      "in the camera, or -1 if channel is not configued." ];
  repeated int32 configured_channel_id                     = 12 [
    (CFO).desc = "Id of each channel configured in the run." ];

  repeated int32 configured_module_index                   = 21 [
    (CFO).desc = "Index within list of configured modules for each module "
      "in the camera, or -1 if module is not configued." ];
  repeated int32 configured_module_id                      = 22 [
    (CFO).desc = "Id of each module configured in the run." ];

  uint32 num_samples                                       = 31 [
    (CFO).desc = "Number of samples in each trace." ];
  double nominal_sampling_frequency                        = 32 [
    (CFO).desc = "Nominal DAQ waveform sampling frequency, or zero if unknown. May "
      "not be calibrated.", (CFO).units = "MHz" ];

  calin.ix.iact_data.instrument_layout.
      CameraLayout camera_layout                           = 101 [
    (CFO).desc = "Camera layout." ];

  oneof camera_specific_configuration {
    calin.ix.iact_data.nectarcam_module_configuration.NectarCamCameraConfiguration nectarcam = 200 [
      (CFO).desc = "NectarCam configuration elements." ];
  }

  SerializedRawHeaderType serialized_raw_header_type        = 998 [
    (CFO).desc = "Flag describing type of serialized raw header data included.",
    (CFO).sql.dont_store = true ];
  bytes serialized_raw_header                               = 999 [
    (CFO).desc = "Serialized raw header.", (CFO).sql.dont_store = true ];
};
